# thermalspraycell

./: .gitignore  .gitignore.save  ROS getting started  pipeline.txt
Objects_CAD/: Complex_part_new.stl
fanuc_experimental/fanuc_control/: CMakeLists.txt
fanuc_experimental/fanuc_control/src/: CV_RealSense.cpp  trajectory_node.cpp
fanuc_experimental/fanuc_lrmate200id7l_moveit_config/config/: joint_limits.yaml
fanuc_experimental/fanuc_lrmate200id_moveit_config/config/: fanuc_lrmate200id.srdf  joint_limits.yaml  kinematics.yaml
fanuc_experimental/fanuc_lrmate200id_moveit_config/launch/: moveit.rviz  moveit_planning_execution.launch  start.launch  trajectory_execution.launch.xml
fanuc_experimental/fanuc_lrmate200id_support/meshes/lrmate200id/visual/: Complex_part.stl  igla.stl  setup_for_camera.stl  spray_tool.stl  table_for_robot.stl
fanuc_experimental/fanuc_lrmate200id_support/urdf/: igla_tool.xacro  lrmate200id.xacro  lrmate200id_macro.xacro  spray_tool.xacro  stand_for_camera.xacro  table.xacro
fanuc_experimental/realsense-ros/realsense2_camera/launch/: rs_camera.launch
fanuc_experimental/realsense-ros/realsense2_description/urdf/: _d435.urdf.xacro
fmauch_universal_robot/ur5_control/: CMakeLists.txt  ur_test.launch
fmauch_universal_robot/ur5_control/include/: EdoCodesReal.h  EdoControl.h  EdoControlReal.h  EdoControlSim.h
fmauch_universal_robot/ur5_control/src/: CV_RealSense.cpp  EdoCodesReal.cpp  EdoControl.cpp  EdoControlReal.cpp  EdoControlSim.cpp  IK_by_trac_IK.cpp
